--- a/Сборки-от-Аддерли.css
+++ b/Сборки-от-Аддерли.css
@@ -13,60 +13,60 @@
 .u-section-1 .u-btn-1 {
   background-image: none;
   box-shadow: 5px 5px 20px 0 rgba(0,0,0,0.4);
-  margin: 20px auto 0 131px;
+  margin: 12px auto 0 135px;
   padding: 10px 45px 10px 43px;
 }
 
 .u-section-1 .u-btn-2 {
   background-image: none;
   box-shadow: 5px 5px 20px 0 rgba(0,0,0,0.4);
-  margin: -45px auto 0 382px;
+  margin: -45px auto 0 378px;
   padding: 10px 36px 10px 35px;
 }
 
 .u-section-1 .u-text-2 {
   font-size: 3rem;
   font-weight: 700;
-  margin: -37px 120px 0 auto;
+  margin: -29px 120px 0 auto;
 }
 
 .u-section-1 .u-btn-3 {
   background-image: none;
   box-shadow: 5px 5px 20px 0 rgba(0,0,0,0.4);
-  margin: -30px auto 0 382px;
+  margin: -38px auto 0 378px;
   padding: 10px 37px 10px 36px;
 }
 
 .u-section-1 .u-btn-4 {
   background-image: none;
   box-shadow: 5px 5px 20px 0 rgba(0,0,0,0.4);
-  margin: -45px auto 0 131px;
+  margin: -45px auto 0 135px;
   padding: 10px 37px 10px 36px;
 }
 
 .u-section-1 .u-btn-5 {
-  margin: -15px 94px 0 auto;
+  margin: -7px 94px 0 auto;
   padding: 17px 48px 18px 47px;
 }
 
 .u-section-1 .u-btn-6 {
   background-image: none;
   box-shadow: 5px 5px 20px 0 rgba(0,0,0,0.4);
-  margin: -37px auto 0 131px;
+  margin: -45px auto 0 135px;
   padding: 10px 39px 10px 38px;
 }
 
 .u-section-1 .u-btn-7 {
   background-image: none;
   box-shadow: 5px 5px 20px 0 rgba(0,0,0,0.4);
-  margin: -45px auto 0 382px;
+  margin: -45px auto 0 378px;
   padding: 10px 39px 10px 38px;
 }
 
 .u-section-1 .u-text-3 {
   font-weight: 700;
   font-size: 1.5rem;
-  margin: 66px 81px 0;
+  margin: 74px 81px 0;
 }
 
 .u-section-1 .u-text-4 {
@@ -92,18 +92,21 @@
 
 .u-section-1 .u-btn-8 {
   align-self: center;
+  background-image: none;
   margin: 0 auto;
   padding: 10px 75px 10px 74px;
 }
 
 .u-section-1 .u-btn-9 {
   align-self: center;
+  background-image: none;
   margin: 12px auto 0;
   padding: 10px 69px 10px 67px;
 }
 
 .u-section-1 .u-btn-10 {
   align-self: center;
+  background-image: none;
   margin: 12px auto 0;
   padding: 10px 47px 10px 46px;
 }
@@ -138,17 +141,22 @@
 
 .u-section-1 .u-btn-15 {
   background-image: none;
-  margin: 12px auto 57px;
+  margin: 12px auto 58px;
   padding: 10px 58px 10px 56px;
 }
 
 @media (max-width: 1199px) {
   .u-section-1 .u-sheet-1 {
-    min-height: 1597px;
+    min-height: 1598px;
+  }
+
+  .u-section-1 .u-text-1 {
+    width: auto;
+    margin-top: 104px;
+    margin-left: auto;
   }
 
   .u-section-1 .u-btn-1 {
-    margin-top: 22px;
     margin-left: 231px;
   }
 
@@ -211,7 +219,6 @@
 
 @media (max-width: 991px) {
   .u-section-1 .u-text-1 {
-    width: auto;
     margin-left: 24px;
     margin-right: 24px;
   }
@@ -261,50 +268,57 @@
   .u-section-1 .u-text-7 {
     margin-top: 99px;
   }
+
+  .u-section-1 .u-btn-15 {
+    margin-bottom: 57px;
+  }
 }
 
 @media (max-width: 767px) {
+  .u-section-1 .u-sheet-1 {
+    min-height: 1812px;
+  }
+
   .u-section-1 .u-btn-1 {
-    margin-top: 9px;
-    margin-left: 28px;
+    margin-top: 11px;
+    margin-left: 34px;
   }
 
   .u-section-1 .u-btn-2 {
     margin-top: 63px;
-    margin-left: 283px;
+    margin-left: 276px;
   }
 
   .u-section-1 .u-text-2 {
-    margin-top: 45px;
+    margin-top: 43px;
   }
 
   .u-section-1 .u-btn-3 {
-    margin-top: -274px;
-    margin-left: 283px;
+    margin-top: -272px;
+    margin-left: 276px;
   }
 
   .u-section-1 .u-btn-4 {
     margin-top: 9px;
-    margin-left: 28px;
+    margin-left: 34px;
   }
 
   .u-section-1 .u-btn-5 {
-    margin-top: 175px;
+    margin-top: 173px;
   }
 
   .u-section-1 .u-btn-6 {
-    margin-top: -226px;
-    margin-left: 28px;
+    margin-top: -224px;
+    margin-left: 34px;
   }
 
   .u-section-1 .u-btn-7 {
     margin-top: -99px;
-    margin-left: 283px;
+    margin-left: 276px;
   }
 
   .u-section-1 .u-text-3 {
     width: 378px;
-    margin-top: 445px;
   }
 
   .u-section-1 .u-text-4 {
