--- a/Windows-8-1-сборки.css
+++ b/Windows-8-1-сборки.css
@@ -3,7 +3,7 @@
 }
 
 .u-section-1 .u-sheet-1 {
-  min-height: 2045px;
+  min-height: 2000px;
 }
 
 .u-section-1 .u-text-1 {
@@ -23,28 +23,16 @@
 .u-section-1 .u-image-2 {
   width: 560px;
   height: 314px;
-  margin: -314px auto 0 0;
+  margin: -314px auto 0 580px;
 }
 
 .u-section-1 .u-image-3 {
   width: 560px;
   height: 314px;
-  margin: -314px 0 0 auto;
-}
-
-.u-section-1 .u-image-4 {
-  width: 560px;
-  height: 314px;
-  margin: -314px auto 0 580px;
-}
-
-.u-section-1 .u-image-5 {
-  width: 560px;
-  height: 314px;
   margin: 15px auto 0 0;
 }
 
-.u-section-1 .u-image-6 {
+.u-section-1 .u-image-4 {
   width: 560px;
   height: 314px;
   margin: -314px 0 0 auto;
@@ -86,160 +74,132 @@
 .u-section-1 .u-btn-5 {
   background-image: none;
   box-shadow: 5px 5px 20px 0 rgba(0,0,0,0.4);
-  margin: 6px auto 51px;
+  margin: 6px auto 31px;
   padding: 10px 37px;
 }
 
 @media (max-width: 1199px) {
+  .u-section-1 .u-sheet-1 {
+    min-height: 2668px;
+  }
+
   .u-section-1 .u-image-1 {
-    width: 468px;
-    height: 262px;
+    margin-top: 17px;
+    margin-left: auto;
+  }
+
+  .u-section-1 .u-image-2 {
+    margin-top: 15px;
+    margin-left: auto;
   }
 
   .u-section-1 .u-image-3 {
-    width: 469px;
-    height: 264px;
-    margin-top: -264px;
+    margin-left: auto;
   }
 
   .u-section-1 .u-image-4 {
-    margin-left: 380px;
-  }
-
-  .u-section-1 .u-image-5 {
-    width: 468px;
-    height: 262px;
-    margin-top: 6px;
-  }
-
-  .u-section-1 .u-image-6 {
-    width: 468px;
-    height: 262px;
-    margin-top: -262px;
+    margin-top: 15px;
+    margin-right: auto;
   }
 
   .u-section-1 .u-text-3 {
-    margin-top: 24px;
+    margin-top: 22px;
     margin-right: 75px;
-    width: 865px;
   }
 
   .u-section-1 .u-btn-1 {
-    margin-top: 31px;
     margin-left: 177px;
   }
 
   .u-section-1 .u-btn-2 {
     margin-left: 517px;
   }
-
-  .u-section-1 .u-text-4 {
-    width: auto;
-    margin-top: 155px;
-  }
-
-  .u-section-1 .u-btn-5 {
-    margin-bottom: 35px;
-  }
 }
 
 @media (max-width: 991px) {
   .u-section-1 .u-sheet-1 {
-    min-height: 2453px;
-  }
-
-  .u-section-1 .u-image-4 {
-    margin-left: 160px;
+    min-height: 2783px;
   }
 
   .u-section-1 .u-text-3 {
     margin-right: 0;
-    width: 720px;
   }
 
   .u-section-1 .u-btn-1 {
-    margin-top: 81px;
-    margin-left: 88px;
+    margin-top: 31px;
+    margin-left: 65px;
   }
 
   .u-section-1 .u-btn-2 {
-    margin-left: 385px;
+    margin-left: 408px;
+  }
+
+  .u-section-1 .u-text-4 {
+    margin-top: 98px;
   }
 }
 
 @media (max-width: 767px) {
   .u-section-1 .u-sheet-1 {
-    min-height: 2847px;
+    min-height: 2929px;
   }
 
   .u-section-1 .u-image-1 {
-    margin-top: 10px;
-    margin-left: auto;
+    width: 540px;
+    height: 303px;
   }
 
   .u-section-1 .u-image-2 {
     width: 540px;
     height: 303px;
-    margin-top: -303px;
-    margin-right: 0;
   }
 
   .u-section-1 .u-image-3 {
-    width: 468px;
-    height: 262px;
-    margin-top: 284px;
-    margin-right: auto;
+    width: 540px;
+    height: 303px;
   }
 
   .u-section-1 .u-image-4 {
     width: 540px;
     height: 303px;
-    margin-top: -303px;
-    margin-left: 0;
-    margin-right: 0;
-  }
-
-  .u-section-1 .u-image-5 {
-    margin-top: -536px;
-    margin-left: auto;
-  }
-
-  .u-section-1 .u-image-6 {
-    margin-top: 286px;
-    margin-right: auto;
-  }
-
-  .u-section-1 .u-text-3 {
-    width: auto;
-    margin-top: 60px;
   }
 
   .u-section-1 .u-btn-1 {
-    margin-top: 251px;
+    margin-top: 29px;
     margin-left: auto;
   }
 
   .u-section-1 .u-btn-2 {
-    margin-top: 9px;
+    margin-top: 17px;
     margin-left: auto;
   }
 
   .u-section-1 .u-text-4 {
-    margin-top: 85px;
-  }
-
-  .u-section-1 .u-btn-5 {
-    margin-bottom: 28px;
+    margin-top: 103px;
   }
 }
 
 @media (max-width: 575px) {
   .u-section-1 .u-sheet-1 {
-    min-height: 2714px;
+    min-height: 2658px;
+  }
+
+  .u-section-1 .u-text-1 {
+    width: auto;
+    margin-top: 22px;
+    margin-left: 29px;
+    margin-right: 29px;
+  }
+
+  .u-section-1 .u-text-2 {
+    width: auto;
+    margin-top: 15px;
+    margin-left: 8px;
+    margin-right: 8px;
   }
 
   .u-section-1 .u-image-1 {
-    height: 190px;
+    height: 191px;
     margin-top: 19px;
     margin-right: initial;
     margin-left: initial;
@@ -248,15 +208,13 @@
 
   .u-section-1 .u-image-2 {
     height: 191px;
-    margin-top: -191px;
     margin-right: initial;
     margin-left: initial;
     width: auto;
   }
 
   .u-section-1 .u-image-3 {
-    height: 190px;
-    margin-top: 12px;
+    height: 191px;
     margin-right: initial;
     margin-left: initial;
     width: auto;
@@ -264,45 +222,16 @@
 
   .u-section-1 .u-image-4 {
     height: 191px;
-    margin-top: -191px;
     margin-right: initial;
     margin-left: initial;
     width: auto;
-  }
-
-  .u-section-1 .u-image-5 {
-    height: 190px;
-    margin-top: 214px;
-    margin-right: initial;
-    margin-left: initial;
-    width: auto;
-  }
-
-  .u-section-1 .u-image-6 {
-    height: 190px;
-    margin-top: -392px;
-    margin-right: initial;
-    margin-left: initial;
-    width: auto;
-  }
-
-  .u-section-1 .u-text-3 {
-    margin-top: 253px;
-  }
-
-  .u-section-1 .u-btn-1 {
-    margin-top: 497px;
   }
 
   .u-section-1 .u-btn-2 {
-    margin-top: 10px;
+    margin-top: 15px;
   }
 
   .u-section-1 .u-text-4 {
-    margin-top: 31px;
-  }
-
-  .u-section-1 .u-btn-5 {
-    margin-bottom: 26px;
+    margin-top: 105px;
   }
 }
