--- a/Windows-Lite-x32-сборки.css
+++ b/Windows-Lite-x32-сборки.css
@@ -1,5 +1,6 @@
  .u-section-1 {
-  background-image: none;
+  background-image: url("images/backgr.png");
+  background-position: 50% 50%;
 }
 
 .u-section-1 .u-sheet-1 {
@@ -7,17 +8,17 @@
 }
 
 .u-section-1 .u-text-1 {
-  margin: 29px auto 0;
+  margin: 30px auto 0;
 }
 
 .u-section-1 .u-text-2 {
-  margin: 30px auto 0;
+  margin: 13px auto 0;
 }
 
 .u-section-1 .u-image-1 {
   width: 560px;
-  height: 315px;
-  margin: 30px auto 0 0;
+  height: 314px;
+  margin: 46px auto 0 0;
 }
 
 .u-section-1 .u-image-2 {
@@ -170,7 +171,7 @@
 
   .u-section-1 .u-image-1 {
     width: 540px;
-    height: 304px;
+    height: 303px;
   }
 
   .u-section-1 .u-image-2 {
