--- a/Windows-Lite-сборки.css
+++ b/Windows-Lite-сборки.css
@@ -1,5 +1,6 @@
  .u-section-1 {
-  background-image: none;
+  background-image: url("images/backgr.png");
+  background-position: 50% 50%;
 }
 
 .u-section-1 .u-sheet-1 {
@@ -7,17 +8,17 @@
 }
 
 .u-section-1 .u-text-1 {
-  margin: 31px auto 0;
+  margin: 30px auto 0;
 }
 
 .u-section-1 .u-text-2 {
-  margin: 30px auto 0;
+  margin: 13px auto 0;
 }
 
 .u-section-1 .u-image-1 {
   width: 569px;
   height: 320px;
-  margin: 30px auto 0 0;
+  margin: 48px auto 0 0;
 }
 
 .u-section-1 .u-image-2 {
