--- a/Длительность-установки-сборок.css
+++ b/Длительность-установки-сборок.css
@@ -1,5 +1,6 @@
  .u-section-1 {
-  background-image: none;
+  background-image: url("images/backgr.png");
+  background-position: 50% 50%;
 }
 
 .u-section-1 .u-sheet-1 {
@@ -12,21 +13,20 @@
 }
 
 .u-section-1 .u-text-2 {
-  margin-left: 0;
-  margin-right: 0;
-  margin-bottom: 0;
+  font-size: 1.6875rem;
+  margin: -96px 0 0;
 }
 
 .u-section-1 .u-text-3 {
-  margin: 29px 0 0;
+  margin: 20px 0 0;
 }
 
 .u-section-1 .u-text-4 {
-  margin: 2px 0 0;
+  margin: -25px 0 0;
 }
 
 .u-section-1 .u-text-5 {
-  margin: 49px 0 0;
+  margin: 29px 0 0;
 }
 
 .u-section-1 .u-text-6 {
@@ -34,42 +34,58 @@
 }
 
 .u-section-1 .u-text-7 {
-  margin: 49px 0 0;
+  margin: -125px 0 0;
 }
 
 .u-section-1 .u-text-8 {
-  margin: 20px 0 0;
-}
-
-.u-section-1 .u-text-9 {
   margin: 49px 0 0;
 }
 
+.u-section-1 .u-text-9 {
+  margin: 2px 0 0;
+}
+
 .u-section-1 .u-text-10 {
+  margin: 49px 0 0;
+}
+
+.u-section-1 .u-text-11 {
+  margin: 20px 0 0;
+}
+
+.u-section-1 .u-text-12 {
+  margin: 49px 0 0;
+}
+
+.u-section-1 .u-text-13 {
   margin: 20px 0 60px;
 }
 
 @media (max-width: 1199px) {
-  .u-section-1 .u-text-3 {
+  .u-section-1 .u-text-5 {
     width: auto;
     margin-top: 71px;
   }
 
-  .u-section-1 .u-text-4 {
-    width: auto;
-  }
-
-  .u-section-1 .u-text-5 {
-    width: auto;
-  }
-
   .u-section-1 .u-text-6 {
+    width: auto;
+  }
+
+  .u-section-1 .u-text-8 {
+    width: auto;
+  }
+
+  .u-section-1 .u-text-9 {
     width: auto;
   }
 }
 
 @media (max-width: 575px) {
   .u-section-1 .u-text-1 {
+    font-size: 1.5rem;
+  }
+
+  .u-section-1 .u-text-2 {
     font-size: 1.5rem;
   }
 }
