--- a/Скачать-Старые-Windows.css
+++ b/Скачать-Старые-Windows.css
@@ -1,9 +1,10 @@
  .u-section-1 {
-  background-image: none;
+  background-image: url("images/backgr.png");
+  background-position: 50% 50%;
 }
 
 .u-section-1 .u-sheet-1 {
-  min-height: 1474px;
+  min-height: 1680px;
 }
 
 .u-section-1 .u-text-1 {
@@ -71,7 +72,7 @@
 }
 
 .u-section-1 .u-text-3 {
-  margin: 147px auto 0;
+  margin: 89px auto 0;
 }
 
 .u-section-1 .u-btn-9 {
@@ -126,8 +127,33 @@
 .u-section-1 .u-btn-16 {
   background-image: none;
   box-shadow: 5px 5px 20px 0 rgba(0,0,0,0.4);
-  margin: 11px auto 60px;
+  margin: 11px auto 0;
   padding: 10px 255px 10px 253px;
+}
+
+.u-section-1 .u-btn-17 {
+  background-image: none;
+  box-shadow: 5px 5px 20px 0 rgba(0,0,0,0.4);
+  margin: 11px auto 0;
+  padding: 10px 261px 10px 260px;
+}
+
+.u-section-1 .u-btn-18 {
+  background-image: none;
+  box-shadow: 5px 5px 20px 0 rgba(0,0,0,0.4);
+  margin: 11px auto 0;
+  padding: 10px 273px 10px 271px;
+}
+
+.u-section-1 .u-text-4 {
+  margin: 74px auto 0;
+}
+
+.u-section-1 .u-btn-19 {
+  background-image: none;
+  box-shadow: 5px 5px 20px 0 rgba(0,0,0,0.4);
+  margin: 11px auto 60px;
+  padding: 10px 273px 10px 271px;
 }
 
 @media (max-width: 767px) {
@@ -193,8 +219,8 @@
   }
 
   .u-section-1 .u-btn-12 {
-    padding-right: 65px;
     padding-left: 65px;
+    padding-right: 65px;
   }
 
   .u-section-1 .u-btn-13 {
@@ -216,6 +242,27 @@
     padding-left: 119px;
     padding-right: 119px;
   }
+
+  .u-section-1 .u-btn-17 {
+    padding-left: 125px;
+    padding-right: 125px;
+  }
+
+  .u-section-1 .u-btn-18 {
+    padding-right: 138px;
+    padding-left: 136px;
+  }
+
+  .u-section-1 .u-text-4 {
+    width: auto;
+    margin-left: 10px;
+    margin-right: 10px;
+  }
+
+  .u-section-1 .u-btn-19 {
+    padding-right: 181px;
+    padding-left: 180px;
+  }
 }
 
 @media (max-width: 575px) {
@@ -230,13 +277,13 @@
   }
 
   .u-section-1 .u-btn-3 {
-    padding-right: 28px;
     padding-left: 28px;
+    padding-right: 28px;
   }
 
   .u-section-1 .u-btn-4 {
-    margin-left: 0;
-    margin-right: 0;
+    margin-left: -1px;
+    margin-right: -1px;
     padding-right: 12px;
     padding-left: 11px;
   }
@@ -262,8 +309,8 @@
   }
 
   .u-section-1 .u-btn-9 {
-    padding-right: 21px;
     padding-left: 21px;
+    padding-right: 21px;
   }
 
   .u-section-1 .u-btn-10 {
@@ -299,5 +346,20 @@
   .u-section-1 .u-btn-16 {
     padding-left: 19px;
     padding-right: 19px;
+  }
+
+  .u-section-1 .u-btn-17 {
+    padding-right: 70px;
+    padding-left: 68px;
+  }
+
+  .u-section-1 .u-btn-18 {
+    padding-right: 81px;
+    padding-left: 80px;
+  }
+
+  .u-section-1 .u-btn-19 {
+    padding-right: 125px;
+    padding-left: 123px;
   }
 }
