--- a/Софт-от-Аддерли.css
+++ b/Софт-от-Аддерли.css
@@ -1,9 +1,10 @@
  .u-section-1 {
-  background-image: none;
+  background-image: url("images/backgr.png");
+  background-position: 50% 50%;
 }
 
 .u-section-1 .u-sheet-1 {
-  min-height: 1451px;
+  min-height: 1517px;
 }
 
 .u-section-1 .u-text-1 {
@@ -25,19 +26,19 @@
 
 .u-section-1 .u-btn-3 {
   background-image: none;
-  margin: 11px auto 0 110px;
+  margin: 11px auto 0 111px;
   padding: 10px 33px 10px 32px;
 }
 
 .u-section-1 .u-btn-4 {
   background-image: none;
-  margin: -45px auto 0 345px;
+  margin: -45px auto 0 346px;
   padding: 10px 36px 10px 35px;
 }
 
 .u-section-1 .u-btn-5 {
   background-image: none;
-  margin: -45px 111px 0 auto;
+  margin: -45px auto 0 578px;
   padding: 10px 139px 10px 138px;
 }
 
@@ -49,7 +50,7 @@
 
 .u-section-1 .u-btn-7 {
   background-image: none;
-  margin: -45px 365px 0 auto;
+  margin: -45px auto 0 447px;
   padding: 10px 137px;
 }
 
@@ -73,7 +74,7 @@
 
 .u-section-1 .u-btn-11 {
   background-image: none;
-  margin: -45px 110px 0 auto;
+  margin: -45px auto 0 758px;
   padding: 10px 61px 10px 60px;
 }
 
@@ -91,7 +92,7 @@
 
 .u-section-1 .u-btn-14 {
   background-image: none;
-  margin: -45px 365px 0 auto;
+  margin: -45px auto 0 482px;
   padding: 10px 47px;
 }
 
@@ -103,33 +104,81 @@
 
 .u-section-1 .u-btn-16 {
   background-image: none;
-  margin: 11px auto 0 110px;
+  margin: 11px auto 0 111px;
   padding: 10px 27px 10px 25px;
 }
 
 .u-section-1 .u-btn-17 {
   background-image: none;
-  margin: -45px 365px 0 auto;
+  margin: -45px auto 0 431px;
   padding: 10px 48px 10px 47px;
 }
 
 .u-section-1 .u-btn-18 {
   background-image: none;
-  margin: -45px 111px 0 auto;
+  margin: -45px auto 0 786px;
   padding: 10px 54px 10px 53px;
 }
 
+.u-section-1 .u-btn-19 {
+  background-image: none;
+  margin: 53px auto 0 110px;
+  padding: 10px 27px 10px 25px;
+}
+
+.u-section-1 .u-btn-20 {
+  background-image: none;
+  margin: -45px auto 0 302px;
+  padding: 10px 27px 10px 25px;
+}
+
+.u-section-1 .u-btn-21 {
+  background-image: none;
+  margin: -45px auto 0 461px;
+  padding: 10px 27px 10px 25px;
+}
+
+.u-section-1 .u-btn-22 {
+  background-image: none;
+  margin: -45px 419px 0 auto;
+  padding: 10px 27px 10px 25px;
+}
+
+.u-section-1 .u-btn-23 {
+  background-image: none;
+  margin: -45px 110px 0 auto;
+  padding: 10px 33px 10px 32px;
+}
+
+.u-section-1 .u-btn-24 {
+  background-image: none;
+  margin: 11px auto 0 110px;
+  padding: 10px 27px 10px 25px;
+}
+
+.u-section-1 .u-btn-25 {
+  background-image: none;
+  margin: -45px auto 0 357px;
+  padding: 10px 27px 10px 25px;
+}
+
+.u-section-1 .u-btn-26 {
+  background-image: none;
+  margin: -45px 110px 0 auto;
+  padding: 10px 39px 10px 37px;
+}
+
 .u-section-1 .u-text-2 {
-  margin: 78px 0 0;
+  margin: 312px 0 0;
 }
 
 .u-section-1 .u-text-3 {
-  margin: 639px 19px 19px;
+  margin: 251px 19px 60px;
 }
 
 @media (max-width: 1199px) {
   .u-section-1 .u-sheet-1 {
-    min-height: 1955px;
+    min-height: 2779px;
   }
 
   .u-section-1 .u-text-1 {
@@ -158,7 +207,7 @@
 
   .u-section-1 .u-btn-5 {
     margin-top: 16px;
-    margin-right: auto;
+    margin-left: auto;
   }
 
   .u-section-1 .u-btn-6 {
@@ -168,7 +217,7 @@
 
   .u-section-1 .u-btn-7 {
     margin-top: 16px;
-    margin-right: auto;
+    margin-left: auto;
   }
 
   .u-section-1 .u-btn-8 {
@@ -188,7 +237,7 @@
 
   .u-section-1 .u-btn-11 {
     margin-top: 16px;
-    margin-right: auto;
+    margin-left: auto;
   }
 
   .u-section-1 .u-btn-12 {
@@ -203,7 +252,7 @@
 
   .u-section-1 .u-btn-14 {
     margin-top: 16px;
-    margin-right: auto;
+    margin-left: auto;
   }
 
   .u-section-1 .u-btn-15 {
@@ -218,30 +267,66 @@
 
   .u-section-1 .u-btn-17 {
     margin-top: 16px;
-    margin-right: auto;
+    margin-left: auto;
   }
 
   .u-section-1 .u-btn-18 {
     margin-top: 16px;
+    margin-left: auto;
+  }
+
+  .u-section-1 .u-btn-19 {
+    margin-top: 16px;
+    margin-left: auto;
+  }
+
+  .u-section-1 .u-btn-20 {
+    margin-top: 16px;
+    margin-left: auto;
+  }
+
+  .u-section-1 .u-btn-21 {
+    margin-top: 16px;
+    margin-left: auto;
+  }
+
+  .u-section-1 .u-btn-22 {
+    margin-top: 16px;
+    margin-right: auto;
+  }
+
+  .u-section-1 .u-btn-23 {
+    margin-top: 138px;
+    margin-right: auto;
+  }
+
+  .u-section-1 .u-btn-24 {
+    margin-top: -106px;
+    margin-left: auto;
+  }
+
+  .u-section-1 .u-btn-25 {
+    margin-top: -106px;
+    margin-left: auto;
+  }
+
+  .u-section-1 .u-btn-26 {
+    margin-top: 138px;
     margin-right: auto;
   }
 
   .u-section-1 .u-text-2 {
     width: auto;
-    margin-top: 68px;
+    margin-top: 430px;
   }
 
   .u-section-1 .u-text-3 {
     width: auto;
-    margin: 385px 0 11px;
+    margin: 356px 0 29px;
   }
 }
 
 @media (max-width: 991px) {
-  .u-section-1 .u-sheet-1 {
-    min-height: 2145px;
-  }
-
   .u-section-1 .u-text-1 {
     margin-top: 56px;
   }
@@ -250,31 +335,39 @@
     margin-top: 16px;
   }
 
+  .u-section-1 .u-btn-19 {
+    margin-top: 260px;
+  }
+
+  .u-section-1 .u-btn-20 {
+    margin-top: -228px;
+  }
+
+  .u-section-1 .u-btn-25 {
+    margin-top: -350px;
+  }
+
+  .u-section-1 .u-btn-26 {
+    margin-top: 382px;
+  }
+
   .u-section-1 .u-text-2 {
-    margin-top: 38px;
+    margin-top: 181px;
   }
 
   .u-section-1 .u-text-3 {
-    margin-top: 661px;
-    margin-bottom: 19px;
+    margin-top: 339px;
+    margin-bottom: 60px;
   }
 }
 
 @media (max-width: 767px) {
-  .u-section-1 .u-sheet-1 {
-    min-height: 2453px;
-  }
-
-  .u-section-1 .u-text-2 {
-    margin-top: 104px;
+  .u-section-1 .u-btn-19 {
+    margin-top: 287px;
   }
 }
 
 @media (max-width: 575px) {
-  .u-section-1 .u-sheet-1 {
-    min-height: 2448px;
-  }
-
   .u-section-1 .u-text-1 {
     margin-top: 60px;
   }
@@ -290,64 +383,18 @@
     padding: 19px 35px 20px;
   }
 
-  .u-section-1 .u-btn-3 {
-    margin-left: 56px;
-  }
-
-  .u-section-1 .u-btn-4 {
-    margin-left: 59px;
-  }
-
   .u-section-1 .u-btn-5 {
-    margin-left: -2px;
+    margin-left: 0;
+    margin-right: 0;
     padding-right: 83px;
     padding-left: 82px;
   }
 
-  .u-section-1 .u-btn-6 {
-    margin-left: 4px;
-  }
-
-  .u-section-1 .u-btn-7 {
-    margin-left: 4px;
-  }
-
-  .u-section-1 .u-btn-8 {
-    margin-left: 46px;
-  }
-
   .u-section-1 .u-btn-9 {
-    margin-left: -2px;
+    margin-left: 0;
+    margin-right: 0;
     padding-right: 63px;
     padding-left: 62px;
-  }
-
-  .u-section-1 .u-btn-10 {
-    margin-left: 35px;
-  }
-
-  .u-section-1 .u-btn-11 {
-    margin-left: 32px;
-  }
-
-  .u-section-1 .u-btn-12 {
-    margin-left: 90px;
-  }
-
-  .u-section-1 .u-btn-13 {
-    margin-left: 69px;
-  }
-
-  .u-section-1 .u-btn-14 {
-    margin-left: 21px;
-  }
-
-  .u-section-1 .u-btn-15 {
-    margin-left: 45px;
-  }
-
-  .u-section-1 .u-btn-16 {
-    margin-left: 13px;
   }
 
   .u-section-1 .u-btn-17 {
@@ -355,16 +402,22 @@
     margin-right: -2px;
   }
 
-  .u-section-1 .u-btn-18 {
-    margin-left: 46px;
+  .u-section-1 .u-btn-19 {
+    margin-top: 260px;
+  }
+
+  .u-section-1 .u-btn-25 {
+    margin-left: -1px;
+    margin-right: -1px;
+    padding-left: 0;
+    padding-right: 0;
   }
 
   .u-section-1 .u-text-2 {
-    margin-top: 59px;
+    margin-top: 237px;
   }
 
   .u-section-1 .u-text-3 {
-    margin-top: 692px;
-    margin-bottom: 60px;
+    margin-top: 335px;
   }
 }
