--- a/Новости.css
+++ b/Новости.css
@@ -3,7 +3,7 @@
 }
 
 .u-section-1 .u-sheet-1 {
-  min-height: 1423px;
+  min-height: 2227px;
 }
 
 .u-section-1 .u-text-1 {
@@ -11,42 +11,55 @@
 }
 
 .u-section-1 .u-text-2 {
-  margin: 28px auto 0;
+  margin: 9px auto 0;
 }
 
 .u-section-1 .u-text-3 {
-  margin: 0 21px;
+  margin: 0 42px 0 0;
+}
+
+.u-section-1 .u-image-1 {
+  height: 590px;
+  margin-top: 9px;
+  margin-bottom: 0;
 }
 
 .u-section-1 .u-text-4 {
-  margin: 62px auto 0;
+  margin: 81px auto 0;
 }
 
 .u-section-1 .u-text-5 {
-  margin: 0 21px 60px;
+  margin: 0 21px;
+}
+
+.u-section-1 .u-text-6 {
+  margin: 62px auto 0;
+}
+
+.u-section-1 .u-text-7 {
+  margin: 0 21px 28px;
 }
 
 @media (max-width: 1199px) {
-  .u-section-1 .u-sheet-1 {
-    min-height: 1644px;
-  }
-
-  .u-section-1 .u-text-2 {
-    width: auto;
-  }
-
   .u-section-1 .u-text-3 {
-    width: auto;
-    margin-left: 0;
     margin-right: 0;
   }
 
   .u-section-1 .u-text-4 {
     width: auto;
-    margin-top: 52px;
   }
 
   .u-section-1 .u-text-5 {
+    width: auto;
+    margin-left: 0;
+    margin-right: 0;
+  }
+
+  .u-section-1 .u-text-6 {
+    width: auto;
+  }
+
+  .u-section-1 .u-text-7 {
     width: auto;
     margin-left: 0;
     margin-right: 0;
@@ -55,14 +68,18 @@
 
 @media (max-width: 991px) {
   .u-section-1 .u-sheet-1 {
-    min-height: 2345px;
+    min-height: 2731px;
+  }
+
+  .u-section-1 .u-image-1 {
+    height: 413px;
   }
 
   .u-section-1 .u-text-4 {
-    margin-top: 178px;
+    margin-top: 258px;
   }
 
-  .u-section-1 .u-text-5 {
+  .u-section-1 .u-text-7 {
     margin-left: 21px;
     margin-right: 21px;
   }
@@ -70,20 +87,34 @@
 
 @media (max-width: 767px) {
   .u-section-1 .u-sheet-1 {
-    min-height: 2763px;
+    min-height: 3271px;
+  }
+
+  .u-section-1 .u-image-1 {
+    height: 302px;
   }
 
   .u-section-1 .u-text-4 {
-    margin-top: 69px;
+    margin-top: 82px;
+  }
+
+  .u-section-1 .u-text-7 {
+    margin-bottom: 60px;
   }
 }
 
 @media (max-width: 575px) {
-  .u-section-1 .u-sheet-1 {
-    min-height: 1771px;
+  .u-section-1 .u-text-2 {
+    width: auto;
+    margin-top: 8px;
   }
 
-  .u-section-1 .u-text-2 {
-    margin-top: 44px;
+  .u-section-1 .u-text-3 {
+    width: auto;
+    margin-top: 1px;
+  }
+
+  .u-section-1 .u-image-1 {
+    height: 189px;
   }
 }
