--- a/Сборки-от-Аддерли.css
+++ b/Сборки-от-Аддерли.css
@@ -4,7 +4,7 @@
 }
 
 .u-section-1 .u-sheet-1 {
-  min-height: 975px;
+  min-height: 850px;
 }
 
 .u-section-1 .u-text-1 {
@@ -14,112 +14,112 @@
 .u-section-1 .u-btn-1 {
   background-image: none;
   box-shadow: 5px 5px 20px 0 rgba(0,0,0,0.4);
-  margin: 41px auto 0 571px;
+  margin: 125px auto 0 334px;
   padding: 10px 24px 10px 23px;
 }
 
 .u-section-1 .u-btn-2 {
   background-image: none;
   box-shadow: 5px 5px 20px 0 rgba(0,0,0,0.4);
-  margin: -45px auto 0 335px;
+  margin: -45px auto 0 98px;
   padding: 10px 44px 10px 43px;
 }
 
 .u-section-1 .u-btn-3 {
   background-image: none;
   box-shadow: 5px 5px 20px 0 rgba(0,0,0,0.4);
-  margin: 9px auto 0 335px;
-  padding: 10px 37px 10px 36px;
+  margin: -45px auto 0 573px;
+  padding: 10px 105px;
 }
 
 .u-section-1 .u-btn-4 {
   background-image: none;
   box-shadow: 5px 5px 20px 0 rgba(0,0,0,0.4);
-  margin: -45px auto 0 571px;
+  margin: 9px auto 0 98px;
   padding: 10px 37px 10px 36px;
 }
 
 .u-section-1 .u-btn-5 {
   background-image: none;
   box-shadow: 5px 5px 20px 0 rgba(0,0,0,0.4);
-  margin: 9px auto 0 335px;
-  padding: 10px 39px 10px 38px;
+  margin: -45px auto 0 334px;
+  padding: 10px 37px 10px 36px;
 }
 
 .u-section-1 .u-btn-6 {
   background-image: none;
   box-shadow: 5px 5px 20px 0 rgba(0,0,0,0.4);
-  margin: -45px auto 0 571px;
-  padding: 10px 39px 10px 38px;
+  margin: -45px auto 0 573px;
+  padding: 10px 130px 10px 129px;
 }
 
 .u-section-1 .u-btn-7 {
   background-image: none;
   box-shadow: 5px 5px 20px 0 rgba(0,0,0,0.4);
-  margin: 9px auto 0 571px;
-  padding: 10px 20px;
+  margin: 9px auto 0 98px;
+  padding: 10px 39px 10px 38px;
 }
 
 .u-section-1 .u-btn-8 {
   background-image: none;
   box-shadow: 5px 5px 20px 0 rgba(0,0,0,0.4);
-  margin: -45px auto 0 335px;
-  padding: 10px 36px 10px 35px;
+  margin: -45px auto 0 334px;
+  padding: 10px 39px 10px 38px;
 }
 
 .u-section-1 .u-btn-9 {
   background-image: none;
   box-shadow: 5px 5px 20px 0 rgba(0,0,0,0.4);
-  margin: 9px auto 0 335px;
-  padding: 10px 50px 10px 49px;
+  margin: -45px auto 0 574px;
+  padding: 10px 201px;
 }
 
 .u-section-1 .u-btn-10 {
   background-image: none;
   box-shadow: 5px 5px 20px 0 rgba(0,0,0,0.4);
-  margin: -45px auto 0 571px;
-  padding: 10px 50px;
+  margin: 9px auto 0 334px;
+  padding: 10px 20px;
 }
 
 .u-section-1 .u-btn-11 {
   background-image: none;
   box-shadow: 5px 5px 20px 0 rgba(0,0,0,0.4);
-  margin: 9px auto 0;
-  padding: 10px 105px;
+  margin: -45px auto 0 98px;
+  padding: 10px 36px 10px 35px;
 }
 
 .u-section-1 .u-btn-12 {
   background-image: none;
   box-shadow: 5px 5px 20px 0 rgba(0,0,0,0.4);
-  margin: 9px auto 0;
-  padding: 10px 130px 10px 129px;
+  margin: -45px auto 0 574px;
+  padding: 10px 94px 10px 93px;
 }
 
 .u-section-1 .u-btn-13 {
   background-image: none;
   box-shadow: 5px 5px 20px 0 rgba(0,0,0,0.4);
-  margin: 9px auto 0;
-  padding: 10px 201px;
+  margin: 9px auto 0 98px;
+  padding: 10px 50px 10px 49px;
 }
 
 .u-section-1 .u-btn-14 {
   background-image: none;
   box-shadow: 5px 5px 20px 0 rgba(0,0,0,0.4);
-  margin: 9px auto 0;
-  padding: 10px 94px 10px 93px;
+  margin: -45px auto 0 334px;
+  padding: 10px 50px;
 }
 
 .u-section-1 .u-btn-15 {
   background-image: none;
   box-shadow: 5px 5px 20px 0 rgba(0,0,0,0.4);
-  margin: 9px auto 0;
+  margin: -45px auto 0 574px;
   padding: 10px 129px;
 }
 
 .u-section-1 .u-btn-16 {
   background-image: none;
   box-shadow: 5px 5px 20px 0 rgba(0,0,0,0.4);
-  margin: 9px auto 60px;
+  margin: 9px 98px 60px auto;
   padding: 10px 127px;
 }
 
@@ -135,73 +135,79 @@
   }
 
   .u-section-1 .u-btn-1 {
-    margin-right: 230px;
-    margin-left: auto;
+    margin-top: 126px;
+    margin-left: 235px;
   }
 
   .u-section-1 .u-btn-2 {
-    margin-left: 231px;
+    margin-left: -14px;
   }
 
   .u-section-1 .u-btn-3 {
-    margin-left: 231px;
-  }
-
-  .u-section-1 .u-btn-4 {
-    margin-left: 479px;
-  }
-
-  .u-section-1 .u-btn-5 {
-    margin-left: 231px;
-  }
-
-  .u-section-1 .u-btn-6 {
-    margin-left: 479px;
-  }
-
-  .u-section-1 .u-btn-7 {
-    margin-left: 480px;
-  }
-
-  .u-section-1 .u-btn-8 {
-    margin-left: 231px;
-  }
-
-  .u-section-1 .u-btn-9 {
-    margin-left: 230px;
-  }
-
-  .u-section-1 .u-btn-10 {
-    margin-right: 230px;
-    margin-left: auto;
-  }
-
-  .u-section-1 .u-btn-11 {
+    margin-left: 474px;
     padding-right: 111px;
     padding-left: 110px;
   }
 
-  .u-section-1 .u-btn-12 {
+  .u-section-1 .u-btn-4 {
+    margin-left: -14px;
+  }
+
+  .u-section-1 .u-btn-5 {
+    margin-left: 235px;
+  }
+
+  .u-section-1 .u-btn-6 {
+    margin-left: 474px;
     padding-left: 135px;
     padding-right: 135px;
   }
 
-  .u-section-1 .u-btn-13 {
+  .u-section-1 .u-btn-7 {
+    margin-left: -14px;
+  }
+
+  .u-section-1 .u-btn-8 {
+    margin-left: 235px;
+  }
+
+  .u-section-1 .u-btn-9 {
+    margin-left: 475px;
     padding-right: 208px;
     padding-left: 207px;
   }
 
-  .u-section-1 .u-btn-14 {
+  .u-section-1 .u-btn-10 {
+    margin-left: 236px;
+  }
+
+  .u-section-1 .u-btn-11 {
+    margin-left: -14px;
+  }
+
+  .u-section-1 .u-btn-12 {
+    margin-left: 475px;
     padding-left: 100px;
     padding-right: 100px;
   }
 
+  .u-section-1 .u-btn-13 {
+    margin-left: -16px;
+  }
+
+  .u-section-1 .u-btn-14 {
+    margin-left: 236px;
+  }
+
   .u-section-1 .u-btn-15 {
+    margin-left: 475px;
     padding-right: 136px;
     padding-left: 135px;
   }
 
   .u-section-1 .u-btn-16 {
+    margin-right: auto;
+    margin-left: 474px;
     padding-right: 134px;
     padding-left: 133px;
   }
@@ -209,7 +215,7 @@
 
 @media (max-width: 991px) {
   .u-section-1 .u-sheet-1 {
-    min-height: 718px;
+    min-height: 1349px;
   }
 
   .u-section-1 .u-text-1 {
@@ -218,117 +224,125 @@
   }
 
   .u-section-1 .u-btn-1 {
-    margin-right: 129px;
+    margin-top: 176px;
+    margin-left: 364px;
   }
 
   .u-section-1 .u-btn-2 {
-    margin-left: 122px;
+    margin-left: 126px;
   }
 
   .u-section-1 .u-btn-3 {
-    margin-left: 122px;
-  }
-
-  .u-section-1 .u-btn-4 {
-    margin-right: 130px;
+    margin-top: 227px;
     margin-left: auto;
   }
 
+  .u-section-1 .u-btn-4 {
+    margin-top: -263px;
+    margin-left: 125px;
+  }
+
   .u-section-1 .u-btn-5 {
-    margin-left: 122px;
+    margin-left: 365px;
   }
 
   .u-section-1 .u-btn-6 {
-    margin-right: 130px;
+    margin-top: 227px;
     margin-left: auto;
   }
 
   .u-section-1 .u-btn-7 {
-    margin-left: 120px;
+    margin-top: -263px;
+    margin-left: 125px;
   }
 
   .u-section-1 .u-btn-8 {
-    margin-right: 130px;
-    margin-left: auto;
+    margin-left: 365px;
   }
 
   .u-section-1 .u-btn-9 {
-    margin-left: 120px;
+    margin-top: 227px;
+    margin-left: auto;
   }
 
   .u-section-1 .u-btn-10 {
-    margin-right: 130px;
+    margin-top: -263px;
+    margin-left: 125px;
+  }
+
+  .u-section-1 .u-btn-11 {
+    margin-left: 365px;
   }
 
   .u-section-1 .u-btn-12 {
-    margin-left: 120px;
+    margin-top: 227px;
+    margin-left: auto;
   }
 
   .u-section-1 .u-btn-13 {
-    margin-left: 120px;
+    margin-top: -263px;
+    margin-left: 125px;
+  }
+
+  .u-section-1 .u-btn-14 {
+    margin-left: 365px;
+  }
+
+  .u-section-1 .u-btn-15 {
+    margin-top: 227px;
+    margin-left: auto;
   }
 
   .u-section-1 .u-btn-16 {
-    margin-left: 122px;
+    margin-left: auto;
   }
 }
 
 @media (max-width: 767px) {
   .u-section-1 .u-sheet-1 {
-    min-height: 539px;
+    min-height: 1133px;
   }
 
   .u-section-1 .u-btn-1 {
-    margin-right: auto;
-    margin-left: 278px;
+    margin-left: 279px;
   }
 
   .u-section-1 .u-btn-2 {
-    margin-left: 31px;
-  }
-
-  .u-section-1 .u-btn-3 {
-    margin-left: 31px;
+    margin-left: 32px;
   }
 
   .u-section-1 .u-btn-4 {
-    margin-right: 32px;
+    margin-right: 30px;
+    margin-left: auto;
   }
 
   .u-section-1 .u-btn-5 {
-    margin-left: 31px;
-  }
-
-  .u-section-1 .u-btn-6 {
-    margin-right: 32px;
+    margin-left: 30px;
   }
 
   .u-section-1 .u-btn-7 {
-    margin-left: 31px;
+    margin-left: 30px;
   }
 
   .u-section-1 .u-btn-8 {
-    margin-right: 32px;
-  }
-
-  .u-section-1 .u-btn-9 {
-    margin-left: 31px;
+    margin-right: 30px;
+    margin-left: auto;
   }
 
   .u-section-1 .u-btn-10 {
-    margin-right: 32px;
+    margin-left: 32px;
   }
 
-  .u-section-1 .u-btn-12 {
-    margin-left: auto;
+  .u-section-1 .u-btn-11 {
+    margin-left: 279px;
   }
 
   .u-section-1 .u-btn-13 {
-    margin-left: auto;
+    margin-left: 32px;
   }
 
-  .u-section-1 .u-btn-16 {
-    margin-left: 31px;
+  .u-section-1 .u-btn-14 {
+    margin-left: 279px;
   }
 }
 
@@ -352,14 +366,13 @@
   }
 
   .u-section-1 .u-btn-3 {
-    margin-top: -101px;
-    margin-left: auto;
-    padding-right: 82px;
-    padding-left: 81px;
+    margin-top: 235px;
+    padding-left: 30px;
+    padding-right: 30px;
   }
 
   .u-section-1 .u-btn-4 {
-    margin-top: -101px;
+    margin-top: -381px;
     margin-right: auto;
     padding-right: 82px;
     padding-left: 81px;
@@ -368,78 +381,78 @@
   .u-section-1 .u-btn-5 {
     margin-top: -101px;
     margin-left: auto;
+    padding-right: 82px;
+    padding-left: 81px;
+  }
+
+  .u-section-1 .u-btn-6 {
+    margin-top: 403px;
+    padding-right: 55px;
+    padding-left: 54px;
+  }
+
+  .u-section-1 .u-btn-7 {
+    margin-top: -549px;
+    margin-left: auto;
     padding-right: 84px;
     padding-left: 83px;
   }
 
-  .u-section-1 .u-btn-6 {
+  .u-section-1 .u-btn-8 {
     margin-top: -101px;
     margin-right: auto;
     padding-right: 84px;
     padding-left: 83px;
   }
 
-  .u-section-1 .u-btn-7 {
-    margin-top: 235px;
+  .u-section-1 .u-btn-9 {
+    margin-top: 571px;
+    padding-left: 127px;
+    padding-right: 127px;
+  }
+
+  .u-section-1 .u-btn-10 {
+    margin-top: -381px;
     margin-left: auto;
     padding-left: 65px;
     padding-right: 65px;
   }
 
-  .u-section-1 .u-btn-8 {
+  .u-section-1 .u-btn-11 {
     margin-top: 11px;
-    margin-right: auto;
+    margin-left: auto;
     padding-right: 81px;
     padding-left: 80px;
   }
 
-  .u-section-1 .u-btn-9 {
-    margin-top: 11px;
+  .u-section-1 .u-btn-12 {
+    margin-top: 291px;
+    padding-right: 20px;
+    padding-left: 19px;
+  }
+
+  .u-section-1 .u-btn-13 {
+    margin-top: -325px;
     margin-left: auto;
     padding-right: 95px;
     padding-left: 94px;
   }
 
-  .u-section-1 .u-btn-10 {
+  .u-section-1 .u-btn-14 {
     margin-top: 11px;
-    margin-right: auto;
+    margin-left: auto;
     padding-left: 95px;
     padding-right: 95px;
   }
 
-  .u-section-1 .u-btn-11 {
-    margin-top: 11px;
-    padding-left: 30px;
-    padding-right: 30px;
-  }
-
-  .u-section-1 .u-btn-12 {
-    margin-top: 11px;
-    padding-right: 55px;
-    padding-left: 54px;
-  }
-
-  .u-section-1 .u-btn-13 {
-    margin-top: 11px;
-    padding-left: 127px;
-    padding-right: 127px;
-  }
-
-  .u-section-1 .u-btn-14 {
-    margin-top: 11px;
-    padding-right: 20px;
-    padding-left: 19px;
-  }
-
   .u-section-1 .u-btn-15 {
-    margin-top: 11px;
+    margin-top: 235px;
     padding-left: 55px;
     padding-right: 55px;
   }
 
   .u-section-1 .u-btn-16 {
     margin-top: 11px;
-    margin-left: auto;
     padding-left: 53px;
     padding-right: 53px;
   }
